--- a/package.json
+++ b/package.json
@@ -6,22 +6,70 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "drizzle-kit generate:pg",
+    "migrate": "tsx ./src/lib/database/migrate.ts"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
+    "@auth/core": "^0.29.0",
+    "@auth/drizzle-adapter": "^0.9.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@neondatabase/serverless": "^0.9.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tabler/icons-react": "^3.1.0",
+    "@types/validator": "^13.11.9",
+    "argon2": "^0.40.1",
+    "aws-sdk": "^2.1597.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "csurf": "^1.11.0",
+    "drizzle-orm": "^0.30.8",
+    "framer-motion": "^11.0.25",
+    "fs": "^0.0.1-security",
+    "helmet": "^7.1.0",
+    "html-loader": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.364.0",
+    "mock-aws-s3": "^4.0.2",
+    "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.16",
+    "next-themes": "^0.3.0",
+    "nock": "^13.5.4",
+    "postgres": "^3.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-hook-form-zod": "^0.3.0",
+    "rimraf": "^5.0.5",
+    "socket.io": "^4.7.5",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.7.2",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/csurf": "^1.11.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
+    "pg": "^8.11.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
