--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@auth/drizzle-adapter": "^0.9.0",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.0",
+    "@nextui-org/react": "^2.2.10",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -24,13 +27,14 @@
     "@types/validator": "^13.11.9",
     "argon2": "^0.40.1",
     "aws-sdk": "^2.1597.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "csurf": "^1.11.0",
     "drizzle-orm": "^0.30.8",
-    "framer-motion": "^11.0.25",
+    "framer-motion": "^11.0.28",
     "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "html-loader": "^5.0.0",
@@ -48,6 +52,7 @@
     "react-hook-form-zod": "^0.3.0",
     "rimraf": "^5.0.5",
     "socket.io": "^4.7.5",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.2",
