--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hook-form-zod": "^0.3.0",
+    "react-icons": "^5.0.1",
     "rimraf": "^5.0.5",
     "socket.io": "^4.7.5",
     "sonner": "^1.4.41",
