--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^3.1.0",
     "@types/validator": "^13.11.9",
+    "@vercel/analytics": "^1.3.1",
     "argon2": "^0.40.1",
     "aws-sdk": "^2.1597.0",
     "axios": "^1.6.8",
